[tool.poetry]
name = "unitsconverter"
version = "0.1.0"
description = ""
authors = ["maccotter11 <122413834+maccotter11@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pretty-errors = "^1.2.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
